Rename to TasTimer — add full source, gitignore, RufusAPI device binding
- Add .gitignore: exclude bin/, *.jar, config.properties, data/
- Untrack previously committed compiled artifacts
- Add all Phase 1–6 source files (AppConfig, DuplicateFilter, FeiBotClient,
  Participant, ParticipantRegistry, RaceSession, ResultsExporter, RufusAPIClient,
  SettingsDialog, TimingPoint, TimingPointManager, TimingPointsDialog, Wave)
- RufusAPIClient: add bindDeviceSync (POST /devices), fix silent error bodies
- SettingsDialog: Bind Device button + serial number / alias fields

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>